@@ -51,6 +51,7 @@ S3method(attrassign, lm)
 S3method(extractAIC,coxph.penal)
 S3method(dim, survfit)
 S3method(lines, aareg)
+S3method(lines, survexp)
 S3method(lines, survfit)
 S3method(logLik, coxph)
 S3method(logLik, survreg)
