@@ -1,0 +1,5 @@
+lines.survexp <- function(x, type="l", ...) {
+    type <- type
+    NextMethod("lines", type=type, ...)
+}
+
